# wheelight

./: .gitignore  README.md
cmake/: CMakeLists.txt
cmake/example/: CMakeLists.txt  program_pic.cmake
cmake/pic/: pic_general.cmake  program_pic.cmake
config/: environment.bashrc
core/example/: blink.asm  blink.c  blink.cod  blink.hex  blink.lst
core/example2/: main.c
core/example3/: blink.adb  blink.asm  blink.c  blink.cod  blink.hex  blink.lst  blink.p
example/mplabx/example/blink.X/: main.c
example/mplabx/example/blink.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  configurations.xml  project.xml
example/mplabx/example/blink.X/nbproject/private/: configurations.xml  private.xml
example/sdcc/: blink.c
journal/: journal.txt
mplabx/example/blink.X/: main.c
mplabx/example/blink.X/nbproject/: Makefile-genesis.properties
pictures/: after_mplabx_installation
